--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
-archivesBaseName  ""
+archivesBaseName = "word_puzzle"
 version = '1.0'
 mainClassName = "App"
 
